2008-01-21  Matthias Clasen  <mclasen@redhat.com>

	* glocal*.c:
	* gvolumemanager.c: Whitespace cleanups.

	* glocalfileoutputsteam.c (_g_local_file_output_stream_create):
	Use the right mode when creating the file.

2008-01-21  Murray Cumming,,,  <murrayc@murrayc.com>

	* gfileenumerator.c:
	* gfileinputstream.c:
	* ginputstream.c:
	* goutputstream.c: Documentation: Fixed minor typos 
	and added more mentions of specific _finish() functions.

2008-01-21  Alexander Larsson  <alexl@redhat.com>

        * inotify/Makefile.am:
        * inotify/inotify-helper.c:
        * inotify/inotify-kernel.c:
        * inotify/inotify-path.c:
        * inotify/local_inotify.h: Removed.
        * inotify/local_inotify_syscalls.h: Removed.
	Removed the included copies of the inotify
	headers. We now only use the <sys/inotify.h>
	header which exists on modern systems.
	This fixes problems on ARM and SH5 (#510448)
	but is also generally much cleaner and future
	safe. For instance, if other OSes add support
	for inotify it should "just work".

2008-01-20  Matthias Clasen  <mclasen@redhat.com>

	* inotify/*.c: Coding style fixes.
	* inotify/inotify-missing.c: Use g_timeout_add_seconds
	for the 1/4 Hz timer.

2008-01-20  Matthias Clasen  <mclasen@redhat.com>

	* gfile.c:
	* gfilemonitor.[hc]:
	* gmemoryinputstream.c:
	* gmemoryoutputstream.c:
	* gmountoperation.c:
	* gthemedicon.c: Documentation updates

2008-01-20  Murray Cumming  <murrayc@murrayc.com>

	* gfile.c: documentation: Fixed more minor 
	typos.

2008-01-18  Murray Cumming  <murrayc@murrayc.com>

	* gmount.c: (g_mount_remount): documentation: 
	Mention g_mount_remount_finish() instead of 
	g_mount_unmount_finish().

2008-01-18  Murray Cumming  <murrayc@murrayc.com>

	* gappinfo.c:
	* gcancellable.c:
	* gfile.c: Fixed some minor typos in the 
	documentation. 

2008-01-18  Murray Cumming  <murrayc@murrayc.com>

	* gio/gvolumemonitor.c: 
	(g_volume_monitor_get_connected_drives): 
	(g_volume_monitor_get_volumes): 